--- a/src/main/resources/com/nuzack/sice/login-view.fxml
+++ b/src/main/resources/com/nuzack/sice/login-view.fxml
@@ -3,34 +3,53 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="480.0" prefWidth="768.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nuzack.sice.LoginController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    <Label text="Usuario:">
-        <VBox.margin>
-            <Insets bottom="-15.0" left="100.0" />
-        </VBox.margin></Label>
-    <TextField prefHeight="26.0" prefWidth="489.0">
-        <VBox.margin>
-            <Insets bottom="-10.0" left="100.0" right="100.0" />
-        </VBox.margin>
-    </TextField>
-    <Label layoutX="130.0" layoutY="30.0" text="Contraseña:">
-        <VBox.margin>
-            <Insets bottom="-15.0" left="100.0" />
-        </VBox.margin>
-    </Label>
-    <TextField layoutX="130.0" layoutY="52.0" prefHeight="26.0" prefWidth="489.0">
-        <VBox.margin>
-            <Insets bottom="-10.0" left="100.0" right="100.0" />
-        </VBox.margin>
-    </TextField>
-    <Button alignment="CENTER" onAction="#onHelloButtonClick" text="Ingresar" textAlignment="CENTER" textFill="RED">
-        <VBox.margin>
-            <Insets left="100.0" right="100.0" />
-        </VBox.margin></Button>
-
-    <Label fx:id="welcomeText" alignment="CENTER" />
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nuzack.sice.LoginController">
+   <center>
+      <VBox alignment="CENTER_LEFT" maxWidth="500.0" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label prefHeight="17.0" prefWidth="94.0" text="Usuario">
+               <font>
+                  <Font name="Inter Semi Bold" size="13.0" />
+               </font></Label>
+            <TextField fx:id="username" prefHeight="35.0">
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></TextField>
+            <Label prefHeight="17.0" prefWidth="110.0" text="Contraseña">
+               <font>
+                  <Font name="Inter Semi Bold" size="13.0" />
+               </font></Label>
+            <PasswordField fx:id="password" prefHeight="35.0">
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></PasswordField>
+            <HBox prefHeight="40.0" prefWidth="400.0">
+               <children>
+                  <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#onButtonLogin" prefHeight="35.0" prefWidth="400.0" text="Ingresar" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+   <bottom>
+      <VBox prefHeight="100.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+   </bottom>
+   <top>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="datos" />
+         </children></HBox>
+   </top>
+   <left>
+      <Pane maxWidth="550.0" minWidth="140.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <Pane maxWidth="550.0" minWidth="140.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </right>
+</BorderPane>
